build/parser.output
Terminals unused in grammar

    TM_MALLOC
    TM_RI
    TM_RC
    TM_WI
    TM_WC
    TM_VAR
    TM_THEN
    TM_DO


State 73 conflicts: 13 shift/reduce


Grammar

    0 $accept: NT_WHOLE $end

    1 NT_WHOLE: NT_CMD

    2 NT_CMD: TM_SKIP
    3       | NT_TYPE TM_IDENT
    4       | TM_IDENT TM_ASGNOP NT_EXPR
    5       | TM_MUL NT_EXPR TM_ASGNOP NT_EXPR
    6       | NT_CMD TM_SEMICOL NT_CMD
    7       | TM_IF TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
    8       | TM_WHILE TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    9 NT_TYPE: TM_INT
   10        | TM_SHORT
   11        | TM_LONG
   12        | TM_BOOL
   13        | TM_LONGLONG
   14        | NT_TYPE TM_MUL

   15 NT_EXPR: TM_NAT
   16        | TM_IDENT
   17        | TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   18        | TM_NOT NT_EXPR
   19        | TM_MINUS NT_EXPR
   20        | TM_MUL NT_EXPR
   21        | TM_BAND NT_EXPR
   22        | TM_LEFT_PAREN NT_TYPE TM_RIGHT_PAREN NT_EXPR
   23        | NT_EXPR TM_PLUS NT_EXPR
   24        | NT_EXPR TM_MINUS NT_EXPR
   25        | NT_EXPR TM_MUL NT_EXPR
   26        | NT_EXPR TM_DIV NT_EXPR
   27        | NT_EXPR TM_MOD NT_EXPR
   28        | NT_EXPR TM_AND NT_EXPR
   29        | NT_EXPR TM_OR NT_EXPR
   30        | NT_EXPR TM_LT NT_EXPR
   31        | NT_EXPR TM_GT NT_EXPR
   32        | NT_EXPR TM_LE NT_EXPR
   33        | NT_EXPR TM_GE NT_EXPR
   34        | NT_EXPR TM_EQ NT_EXPR
   35        | NT_EXPR TM_NE NT_EXPR


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TM_NAT <n> (258) 15
    TM_IDENT <i> (259) 3 4 16
    TM_LEFT_BRACE <none> (260) 7 8
    TM_RIGHT_BRACE <none> (261) 7 8
    TM_LEFT_PAREN <none> (262) 7 8 17 22
    TM_RIGHT_PAREN <none> (263) 7 8 17 22
    TM_SEMICOL <none> (264) 6
    TM_MALLOC <none> (265)
    TM_RI <none> (266)
    TM_RC <none> (267)
    TM_WI <none> (268)
    TM_WC <none> (269)
    TM_VAR <none> (270)
    TM_IF <none> (271) 7
    TM_THEN <none> (272)
    TM_ELSE <none> (273) 7
    TM_WHILE <none> (274) 8
    TM_DO <none> (275)
    TM_SKIP <none> (276) 2
    TM_INT <none> (277) 9
    TM_SHORT <none> (278) 10
    TM_LONG <none> (279) 11
    TM_LONGLONG <none> (280) 13
    TM_BOOL <none> (281) 12
    TM_ASGNOP <none> (282) 4 5
    TM_OR <none> (283) 29
    TM_AND <none> (284) 28
    TM_NOT <none> (285) 18
    TM_LT <none> (286) 30
    TM_LE <none> (287) 32
    TM_GT <none> (288) 31
    TM_GE <none> (289) 33
    TM_EQ <none> (290) 34
    TM_NE <none> (291) 35
    TM_PLUS <none> (292) 23
    TM_MINUS <none> (293) 19 24
    TM_MUL <none> (294) 5 14 20 25
    TM_DIV <none> (295) 26
    TM_MOD <none> (296) 27
    TM_BAND <none> (297) 21
    UMINUS (298)


Nonterminals, with rules where they appear

    $accept (44)
        on left: 0
    NT_WHOLE <c> (45)
        on left: 1
        on right: 0
    NT_CMD <c> (46)
        on left: 2 3 4 5 6 7 8
        on right: 1 6 7 8
    NT_TYPE <t> (47)
        on left: 9 10 11 12 13 14
        on right: 3 14 22
    NT_EXPR <e> (48)
        on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35
        on right: 4 5 7 8 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35


State 0

    0 $accept: • NT_WHOLE $end

    TM_IDENT     shift, and go to state 1
    TM_IF        shift, and go to state 2
    TM_WHILE     shift, and go to state 3
    TM_SKIP      shift, and go to state 4
    TM_INT       shift, and go to state 5
    TM_SHORT     shift, and go to state 6
    TM_LONG      shift, and go to state 7
    TM_LONGLONG  shift, and go to state 8
    TM_BOOL      shift, and go to state 9
    TM_MUL       shift, and go to state 10

    NT_WHOLE  go to state 11
    NT_CMD    go to state 12
    NT_TYPE   go to state 13


State 1

    4 NT_CMD: TM_IDENT • TM_ASGNOP NT_EXPR

    TM_ASGNOP  shift, and go to state 14


State 2

    7 NT_CMD: TM_IF • TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_PAREN  shift, and go to state 15


State 3

    8 NT_CMD: TM_WHILE • TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_PAREN  shift, and go to state 16


State 4

    2 NT_CMD: TM_SKIP •

    $default  reduce using rule 2 (NT_CMD)


State 5

    9 NT_TYPE: TM_INT •

    $default  reduce using rule 9 (NT_TYPE)


State 6

   10 NT_TYPE: TM_SHORT •

    $default  reduce using rule 10 (NT_TYPE)


State 7

   11 NT_TYPE: TM_LONG •

    $default  reduce using rule 11 (NT_TYPE)


State 8

   13 NT_TYPE: TM_LONGLONG •

    $default  reduce using rule 13 (NT_TYPE)


State 9

   12 NT_TYPE: TM_BOOL •

    $default  reduce using rule 12 (NT_TYPE)


State 10

    5 NT_CMD: TM_MUL • NT_EXPR TM_ASGNOP NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_LEFT_PAREN  shift, and go to state 19
    TM_NOT         shift, and go to state 20
    TM_MINUS       shift, and go to state 21
    TM_MUL         shift, and go to state 22
    TM_BAND        shift, and go to state 23

    NT_EXPR  go to state 24


State 11

    0 $accept: NT_WHOLE • $end

    $end  shift, and go to state 25


State 12

    1 NT_WHOLE: NT_CMD •
    6 NT_CMD: NT_CMD • TM_SEMICOL NT_CMD

    TM_SEMICOL  shift, and go to state 26

    $default  reduce using rule 1 (NT_WHOLE)


State 13

    3 NT_CMD: NT_TYPE • TM_IDENT
   14 NT_TYPE: NT_TYPE • TM_MUL

    TM_IDENT  shift, and go to state 27
    TM_MUL    shift, and go to state 28


State 14

    4 NT_CMD: TM_IDENT TM_ASGNOP • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_LEFT_PAREN  shift, and go to state 19
    TM_NOT         shift, and go to state 20
    TM_MINUS       shift, and go to state 21
    TM_MUL         shift, and go to state 22
    TM_BAND        shift, and go to state 23

    NT_EXPR  go to state 29


State 15

    7 NT_CMD: TM_IF TM_LEFT_PAREN • NT_EXPR TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_LEFT_PAREN  shift, and go to state 19
    TM_NOT         shift, and go to state 20
    TM_MINUS       shift, and go to state 21
    TM_MUL         shift, and go to state 22
    TM_BAND        shift, and go to state 23

    NT_EXPR  go to state 30


State 16

    8 NT_CMD: TM_WHILE TM_LEFT_PAREN • NT_EXPR TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_LEFT_PAREN  shift, and go to state 19
    TM_NOT         shift, and go to state 20
    TM_MINUS       shift, and go to state 21
    TM_MUL         shift, and go to state 22
    TM_BAND        shift, and go to state 23

    NT_EXPR  go to state 31


State 17

   15 NT_EXPR: TM_NAT •

    $default  reduce using rule 15 (NT_EXPR)


State 18

   16 NT_EXPR: TM_IDENT •

    $default  reduce using rule 16 (NT_EXPR)


State 19

   17 NT_EXPR: TM_LEFT_PAREN • NT_EXPR TM_RIGHT_PAREN
   22        | TM_LEFT_PAREN • NT_TYPE TM_RIGHT_PAREN NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_LEFT_PAREN  shift, and go to state 19
    TM_INT         shift, and go to state 5
    TM_SHORT       shift, and go to state 6
    TM_LONG        shift, and go to state 7
    TM_LONGLONG    shift, and go to state 8
    TM_BOOL        shift, and go to state 9
    TM_NOT         shift, and go to state 20
    TM_MINUS       shift, and go to state 21
    TM_MUL         shift, and go to state 22
    TM_BAND        shift, and go to state 23

    NT_TYPE  go to state 32
    NT_EXPR  go to state 33


State 20

   18 NT_EXPR: TM_NOT • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_LEFT_PAREN  shift, and go to state 19
    TM_NOT         shift, and go to state 20
    TM_MINUS       shift, and go to state 21
    TM_MUL         shift, and go to state 22
    TM_BAND        shift, and go to state 23

    NT_EXPR  go to state 34


State 21

   19 NT_EXPR: TM_MINUS • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_LEFT_PAREN  shift, and go to state 19
    TM_NOT         shift, and go to state 20
    TM_MINUS       shift, and go to state 21
    TM_MUL         shift, and go to state 22
    TM_BAND        shift, and go to state 23

    NT_EXPR  go to state 35


State 22

   20 NT_EXPR: TM_MUL • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_LEFT_PAREN  shift, and go to state 19
    TM_NOT         shift, and go to state 20
    TM_MINUS       shift, and go to state 21
    TM_MUL         shift, and go to state 22
    TM_BAND        shift, and go to state 23

    NT_EXPR  go to state 36


State 23

   21 NT_EXPR: TM_BAND • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_LEFT_PAREN  shift, and go to state 19
    TM_NOT         shift, and go to state 20
    TM_MINUS       shift, and go to state 21
    TM_MUL         shift, and go to state 22
    TM_BAND        shift, and go to state 23

    NT_EXPR  go to state 37


State 24

    5 NT_CMD: TM_MUL NT_EXPR • TM_ASGNOP NT_EXPR
   23 NT_EXPR: NT_EXPR • TM_PLUS NT_EXPR
   24        | NT_EXPR • TM_MINUS NT_EXPR
   25        | NT_EXPR • TM_MUL NT_EXPR
   26        | NT_EXPR • TM_DIV NT_EXPR
   27        | NT_EXPR • TM_MOD NT_EXPR
   28        | NT_EXPR • TM_AND NT_EXPR
   29        | NT_EXPR • TM_OR NT_EXPR
   30        | NT_EXPR • TM_LT NT_EXPR
   31        | NT_EXPR • TM_GT NT_EXPR
   32        | NT_EXPR • TM_LE NT_EXPR
   33        | NT_EXPR • TM_GE NT_EXPR
   34        | NT_EXPR • TM_EQ NT_EXPR
   35        | NT_EXPR • TM_NE NT_EXPR

    TM_ASGNOP  shift, and go to state 38
    TM_OR      shift, and go to state 39
    TM_AND     shift, and go to state 40
    TM_LT      shift, and go to state 41
    TM_LE      shift, and go to state 42
    TM_GT      shift, and go to state 43
    TM_GE      shift, and go to state 44
    TM_EQ      shift, and go to state 45
    TM_NE      shift, and go to state 46
    TM_PLUS    shift, and go to state 47
    TM_MINUS   shift, and go to state 48
    TM_MUL     shift, and go to state 49
    TM_DIV     shift, and go to state 50
    TM_MOD     shift, and go to state 51


State 25

    0 $accept: NT_WHOLE $end •

    $default  accept


State 26

    6 NT_CMD: NT_CMD TM_SEMICOL • NT_CMD

    TM_IDENT     shift, and go to state 1
    TM_IF        shift, and go to state 2
    TM_WHILE     shift, and go to state 3
    TM_SKIP      shift, and go to state 4
    TM_INT       shift, and go to state 5
    TM_SHORT     shift, and go to state 6
    TM_LONG      shift, and go to state 7
    TM_LONGLONG  shift, and go to state 8
    TM_BOOL      shift, and go to state 9
    TM_MUL       shift, and go to state 10

    NT_CMD   go to state 52
    NT_TYPE  go to state 13


State 27

    3 NT_CMD: NT_TYPE TM_IDENT •

    $default  reduce using rule 3 (NT_CMD)


State 28

   14 NT_TYPE: NT_TYPE TM_MUL •

    $default  reduce using rule 14 (NT_TYPE)


State 29

    4 NT_CMD: TM_IDENT TM_ASGNOP NT_EXPR •
   23 NT_EXPR: NT_EXPR • TM_PLUS NT_EXPR
   24        | NT_EXPR • TM_MINUS NT_EXPR
   25        | NT_EXPR • TM_MUL NT_EXPR
   26        | NT_EXPR • TM_DIV NT_EXPR
   27        | NT_EXPR • TM_MOD NT_EXPR
   28        | NT_EXPR • TM_AND NT_EXPR
   29        | NT_EXPR • TM_OR NT_EXPR
   30        | NT_EXPR • TM_LT NT_EXPR
   31        | NT_EXPR • TM_GT NT_EXPR
   32        | NT_EXPR • TM_LE NT_EXPR
   33        | NT_EXPR • TM_GE NT_EXPR
   34        | NT_EXPR • TM_EQ NT_EXPR
   35        | NT_EXPR • TM_NE NT_EXPR

    TM_OR     shift, and go to state 39
    TM_AND    shift, and go to state 40
    TM_LT     shift, and go to state 41
    TM_LE     shift, and go to state 42
    TM_GT     shift, and go to state 43
    TM_GE     shift, and go to state 44
    TM_EQ     shift, and go to state 45
    TM_NE     shift, and go to state 46
    TM_PLUS   shift, and go to state 47
    TM_MINUS  shift, and go to state 48
    TM_MUL    shift, and go to state 49
    TM_DIV    shift, and go to state 50
    TM_MOD    shift, and go to state 51

    $default  reduce using rule 4 (NT_CMD)


State 30

    7 NT_CMD: TM_IF TM_LEFT_PAREN NT_EXPR • TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   23 NT_EXPR: NT_EXPR • TM_PLUS NT_EXPR
   24        | NT_EXPR • TM_MINUS NT_EXPR
   25        | NT_EXPR • TM_MUL NT_EXPR
   26        | NT_EXPR • TM_DIV NT_EXPR
   27        | NT_EXPR • TM_MOD NT_EXPR
   28        | NT_EXPR • TM_AND NT_EXPR
   29        | NT_EXPR • TM_OR NT_EXPR
   30        | NT_EXPR • TM_LT NT_EXPR
   31        | NT_EXPR • TM_GT NT_EXPR
   32        | NT_EXPR • TM_LE NT_EXPR
   33        | NT_EXPR • TM_GE NT_EXPR
   34        | NT_EXPR • TM_EQ NT_EXPR
   35        | NT_EXPR • TM_NE NT_EXPR

    TM_RIGHT_PAREN  shift, and go to state 53
    TM_OR           shift, and go to state 39
    TM_AND          shift, and go to state 40
    TM_LT           shift, and go to state 41
    TM_LE           shift, and go to state 42
    TM_GT           shift, and go to state 43
    TM_GE           shift, and go to state 44
    TM_EQ           shift, and go to state 45
    TM_NE           shift, and go to state 46
    TM_PLUS         shift, and go to state 47
    TM_MINUS        shift, and go to state 48
    TM_MUL          shift, and go to state 49
    TM_DIV          shift, and go to state 50
    TM_MOD          shift, and go to state 51


State 31

    8 NT_CMD: TM_WHILE TM_LEFT_PAREN NT_EXPR • TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   23 NT_EXPR: NT_EXPR • TM_PLUS NT_EXPR
   24        | NT_EXPR • TM_MINUS NT_EXPR
   25        | NT_EXPR • TM_MUL NT_EXPR
   26        | NT_EXPR • TM_DIV NT_EXPR
   27        | NT_EXPR • TM_MOD NT_EXPR
   28        | NT_EXPR • TM_AND NT_EXPR
   29        | NT_EXPR • TM_OR NT_EXPR
   30        | NT_EXPR • TM_LT NT_EXPR
   31        | NT_EXPR • TM_GT NT_EXPR
   32        | NT_EXPR • TM_LE NT_EXPR
   33        | NT_EXPR • TM_GE NT_EXPR
   34        | NT_EXPR • TM_EQ NT_EXPR
   35        | NT_EXPR • TM_NE NT_EXPR

    TM_RIGHT_PAREN  shift, and go to state 54
    TM_OR           shift, and go to state 39
    TM_AND          shift, and go to state 40
    TM_LT           shift, and go to state 41
    TM_LE           shift, and go to state 42
    TM_GT           shift, and go to state 43
    TM_GE           shift, and go to state 44
    TM_EQ           shift, and go to state 45
    TM_NE           shift, and go to state 46
    TM_PLUS         shift, and go to state 47
    TM_MINUS        shift, and go to state 48
    TM_MUL          shift, and go to state 49
    TM_DIV          shift, and go to state 50
    TM_MOD          shift, and go to state 51


State 32

   14 NT_TYPE: NT_TYPE • TM_MUL
   22 NT_EXPR: TM_LEFT_PAREN NT_TYPE • TM_RIGHT_PAREN NT_EXPR

    TM_RIGHT_PAREN  shift, and go to state 55
    TM_MUL          shift, and go to state 28


State 33

   17 NT_EXPR: TM_LEFT_PAREN NT_EXPR • TM_RIGHT_PAREN
   23        | NT_EXPR • TM_PLUS NT_EXPR
   24        | NT_EXPR • TM_MINUS NT_EXPR
   25        | NT_EXPR • TM_MUL NT_EXPR
   26        | NT_EXPR • TM_DIV NT_EXPR
   27        | NT_EXPR • TM_MOD NT_EXPR
   28        | NT_EXPR • TM_AND NT_EXPR
   29        | NT_EXPR • TM_OR NT_EXPR
   30        | NT_EXPR • TM_LT NT_EXPR
   31        | NT_EXPR • TM_GT NT_EXPR
   32        | NT_EXPR • TM_LE NT_EXPR
   33        | NT_EXPR • TM_GE NT_EXPR
   34        | NT_EXPR • TM_EQ NT_EXPR
   35        | NT_EXPR • TM_NE NT_EXPR

    TM_RIGHT_PAREN  shift, and go to state 56
    TM_OR           shift, and go to state 39
    TM_AND          shift, and go to state 40
    TM_LT           shift, and go to state 41
    TM_LE           shift, and go to state 42
    TM_GT           shift, and go to state 43
    TM_GE           shift, and go to state 44
    TM_EQ           shift, and go to state 45
    TM_NE           shift, and go to state 46
    TM_PLUS         shift, and go to state 47
    TM_MINUS        shift, and go to state 48
    TM_MUL          shift, and go to state 49
    TM_DIV          shift, and go to state 50
    TM_MOD          shift, and go to state 51


State 34

   18 NT_EXPR: TM_NOT NT_EXPR •
   23        | NT_EXPR • TM_PLUS NT_EXPR
   24        | NT_EXPR • TM_MINUS NT_EXPR
   25        | NT_EXPR • TM_MUL NT_EXPR
   26        | NT_EXPR • TM_DIV NT_EXPR
   27        | NT_EXPR • TM_MOD NT_EXPR
   28        | NT_EXPR • TM_AND NT_EXPR
   29        | NT_EXPR • TM_OR NT_EXPR
   30        | NT_EXPR • TM_LT NT_EXPR
   31        | NT_EXPR • TM_GT NT_EXPR
   32        | NT_EXPR • TM_LE NT_EXPR
   33        | NT_EXPR • TM_GE NT_EXPR
   34        | NT_EXPR • TM_EQ NT_EXPR
   35        | NT_EXPR • TM_NE NT_EXPR

    $default  reduce using rule 18 (NT_EXPR)


State 35

   19 NT_EXPR: TM_MINUS NT_EXPR •
   23        | NT_EXPR • TM_PLUS NT_EXPR
   24        | NT_EXPR • TM_MINUS NT_EXPR
   25        | NT_EXPR • TM_MUL NT_EXPR
   26        | NT_EXPR • TM_DIV NT_EXPR
   27        | NT_EXPR • TM_MOD NT_EXPR
   28        | NT_EXPR • TM_AND NT_EXPR
   29        | NT_EXPR • TM_OR NT_EXPR
   30        | NT_EXPR • TM_LT NT_EXPR
   31        | NT_EXPR • TM_GT NT_EXPR
   32        | NT_EXPR • TM_LE NT_EXPR
   33        | NT_EXPR • TM_GE NT_EXPR
   34        | NT_EXPR • TM_EQ NT_EXPR
   35        | NT_EXPR • TM_NE NT_EXPR

    $default  reduce using rule 19 (NT_EXPR)


State 36

   20 NT_EXPR: TM_MUL NT_EXPR •
   23        | NT_EXPR • TM_PLUS NT_EXPR
   24        | NT_EXPR • TM_MINUS NT_EXPR
   25        | NT_EXPR • TM_MUL NT_EXPR
   26        | NT_EXPR • TM_DIV NT_EXPR
   27        | NT_EXPR • TM_MOD NT_EXPR
   28        | NT_EXPR • TM_AND NT_EXPR
   29        | NT_EXPR • TM_OR NT_EXPR
   30        | NT_EXPR • TM_LT NT_EXPR
   31        | NT_EXPR • TM_GT NT_EXPR
   32        | NT_EXPR • TM_LE NT_EXPR
   33        | NT_EXPR • TM_GE NT_EXPR
   34        | NT_EXPR • TM_EQ NT_EXPR
   35        | NT_EXPR • TM_NE NT_EXPR

    $default  reduce using rule 20 (NT_EXPR)


State 37

   21 NT_EXPR: TM_BAND NT_EXPR •
   23        | NT_EXPR • TM_PLUS NT_EXPR
   24        | NT_EXPR • TM_MINUS NT_EXPR
   25        | NT_EXPR • TM_MUL NT_EXPR
   26        | NT_EXPR • TM_DIV NT_EXPR
   27        | NT_EXPR • TM_MOD NT_EXPR
   28        | NT_EXPR • TM_AND NT_EXPR
   29        | NT_EXPR • TM_OR NT_EXPR
   30        | NT_EXPR • TM_LT NT_EXPR
   31        | NT_EXPR • TM_GT NT_EXPR
   32        | NT_EXPR • TM_LE NT_EXPR
   33        | NT_EXPR • TM_GE NT_EXPR
   34        | NT_EXPR • TM_EQ NT_EXPR
   35        | NT_EXPR • TM_NE NT_EXPR

    $default  reduce using rule 21 (NT_EXPR)


State 38

    5 NT_CMD: TM_MUL NT_EXPR TM_ASGNOP • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_LEFT_PAREN  shift, and go to state 19
    TM_NOT         shift, and go to state 20
    TM_MINUS       shift, and go to state 21
    TM_MUL         shift, and go to state 22
    TM_BAND        shift, and go to state 23

    NT_EXPR  go to state 57


State 39

   29 NT_EXPR: NT_EXPR TM_OR • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_LEFT_PAREN  shift, and go to state 19
    TM_NOT         shift, and go to state 20
    TM_MINUS       shift, and go to state 21
    TM_MUL         shift, and go to state 22
    TM_BAND        shift, and go to state 23

    NT_EXPR  go to state 58


State 40

   28 NT_EXPR: NT_EXPR TM_AND • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_LEFT_PAREN  shift, and go to state 19
    TM_NOT         shift, and go to state 20
    TM_MINUS       shift, and go to state 21
    TM_MUL         shift, and go to state 22
    TM_BAND        shift, and go to state 23

    NT_EXPR  go to state 59


State 41

   30 NT_EXPR: NT_EXPR TM_LT • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_LEFT_PAREN  shift, and go to state 19
    TM_NOT         shift, and go to state 20
    TM_MINUS       shift, and go to state 21
    TM_MUL         shift, and go to state 22
    TM_BAND        shift, and go to state 23

    NT_EXPR  go to state 60


State 42

   32 NT_EXPR: NT_EXPR TM_LE • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_LEFT_PAREN  shift, and go to state 19
    TM_NOT         shift, and go to state 20
    TM_MINUS       shift, and go to state 21
    TM_MUL         shift, and go to state 22
    TM_BAND        shift, and go to state 23

    NT_EXPR  go to state 61


State 43

   31 NT_EXPR: NT_EXPR TM_GT • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_LEFT_PAREN  shift, and go to state 19
    TM_NOT         shift, and go to state 20
    TM_MINUS       shift, and go to state 21
    TM_MUL         shift, and go to state 22
    TM_BAND        shift, and go to state 23

    NT_EXPR  go to state 62


State 44

   33 NT_EXPR: NT_EXPR TM_GE • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_LEFT_PAREN  shift, and go to state 19
    TM_NOT         shift, and go to state 20
    TM_MINUS       shift, and go to state 21
    TM_MUL         shift, and go to state 22
    TM_BAND        shift, and go to state 23

    NT_EXPR  go to state 63


State 45

   34 NT_EXPR: NT_EXPR TM_EQ • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_LEFT_PAREN  shift, and go to state 19
    TM_NOT         shift, and go to state 20
    TM_MINUS       shift, and go to state 21
    TM_MUL         shift, and go to state 22
    TM_BAND        shift, and go to state 23

    NT_EXPR  go to state 64


State 46

   35 NT_EXPR: NT_EXPR TM_NE • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_LEFT_PAREN  shift, and go to state 19
    TM_NOT         shift, and go to state 20
    TM_MINUS       shift, and go to state 21
    TM_MUL         shift, and go to state 22
    TM_BAND        shift, and go to state 23

    NT_EXPR  go to state 65


State 47

   23 NT_EXPR: NT_EXPR TM_PLUS • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_LEFT_PAREN  shift, and go to state 19
    TM_NOT         shift, and go to state 20
    TM_MINUS       shift, and go to state 21
    TM_MUL         shift, and go to state 22
    TM_BAND        shift, and go to state 23

    NT_EXPR  go to state 66


State 48

   24 NT_EXPR: NT_EXPR TM_MINUS • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_LEFT_PAREN  shift, and go to state 19
    TM_NOT         shift, and go to state 20
    TM_MINUS       shift, and go to state 21
    TM_MUL         shift, and go to state 22
    TM_BAND        shift, and go to state 23

    NT_EXPR  go to state 67


State 49

   25 NT_EXPR: NT_EXPR TM_MUL • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_LEFT_PAREN  shift, and go to state 19
    TM_NOT         shift, and go to state 20
    TM_MINUS       shift, and go to state 21
    TM_MUL         shift, and go to state 22
    TM_BAND        shift, and go to state 23

    NT_EXPR  go to state 68


State 50

   26 NT_EXPR: NT_EXPR TM_DIV • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_LEFT_PAREN  shift, and go to state 19
    TM_NOT         shift, and go to state 20
    TM_MINUS       shift, and go to state 21
    TM_MUL         shift, and go to state 22
    TM_BAND        shift, and go to state 23

    NT_EXPR  go to state 69


State 51

   27 NT_EXPR: NT_EXPR TM_MOD • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_LEFT_PAREN  shift, and go to state 19
    TM_NOT         shift, and go to state 20
    TM_MINUS       shift, and go to state 21
    TM_MUL         shift, and go to state 22
    TM_BAND        shift, and go to state 23

    NT_EXPR  go to state 70


State 52

    6 NT_CMD: NT_CMD • TM_SEMICOL NT_CMD
    6       | NT_CMD TM_SEMICOL NT_CMD •

    TM_SEMICOL  shift, and go to state 26

    $default  reduce using rule 6 (NT_CMD)


State 53

    7 NT_CMD: TM_IF TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN • TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_BRACE  shift, and go to state 71


State 54

    8 NT_CMD: TM_WHILE TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN • TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_BRACE  shift, and go to state 72


State 55

   22 NT_EXPR: TM_LEFT_PAREN NT_TYPE TM_RIGHT_PAREN • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_LEFT_PAREN  shift, and go to state 19
    TM_NOT         shift, and go to state 20
    TM_MINUS       shift, and go to state 21
    TM_MUL         shift, and go to state 22
    TM_BAND        shift, and go to state 23

    NT_EXPR  go to state 73


State 56

   17 NT_EXPR: TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN •

    $default  reduce using rule 17 (NT_EXPR)


State 57

    5 NT_CMD: TM_MUL NT_EXPR TM_ASGNOP NT_EXPR •
   23 NT_EXPR: NT_EXPR • TM_PLUS NT_EXPR
   24        | NT_EXPR • TM_MINUS NT_EXPR
   25        | NT_EXPR • TM_MUL NT_EXPR
   26        | NT_EXPR • TM_DIV NT_EXPR
   27        | NT_EXPR • TM_MOD NT_EXPR
   28        | NT_EXPR • TM_AND NT_EXPR
   29        | NT_EXPR • TM_OR NT_EXPR
   30        | NT_EXPR • TM_LT NT_EXPR
   31        | NT_EXPR • TM_GT NT_EXPR
   32        | NT_EXPR • TM_LE NT_EXPR
   33        | NT_EXPR • TM_GE NT_EXPR
   34        | NT_EXPR • TM_EQ NT_EXPR
   35        | NT_EXPR • TM_NE NT_EXPR
